--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopping-list",
+  "name": "next-tasks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "mongoose": "^8.7.0",
-    "next": "14.2.13",
+    "mongoose": "^8.2.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-icons": "^2.2.7",
+    "@types/react-icons": "^3.0.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
